zarf/k8s/ingress/ingress-gke.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-service-ingress
spec:
  tls:
    - hosts:
        - api.realpha.org
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for foo.bar.com
      secretName: api.realpha.org
  ingressClassName: nginx
  rules:
    - host: api.realpha.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              # This assumes http-svc exists and routes to healthy endpoints
              service:
                name: api-app-service
                port:
                  number: 8080
