zarf/k8s/ingress/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
spec:
  rules:
    - host: api.arcane.loc
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: rebot-api
                port:
                  number: 8080
